--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title></title>
-<link rel="stylesheet" href="/style.css" media="screen" charset="utf-8" />
+<link rel="stylesheet" href="style.css" media="screen" charset="utf-8" />
 </head>
 <body>
 <div class="container">
@@ -14,7 +14,7 @@
 </div>
 <div>
 
-<script src="/socket.io/socket.io.js"></script>
-<script type="text/javascript" src="/index.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
